bottom spacing issue fix

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,4 @@
 /* div on portal */
 div.css-1yfqe4h {
-  padding-bottom: 20rem;
+  padding-bottom: 7rem;
 }
-
-/* body{
-  background-color: aqua !important;
-} */
